styles.css
 /* GENERAL RESET  */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap');

 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }

 /* VARIABLES  */
 :root {
     --MAINBG-CLR: hsl(220, 41%, 10%);
     --BLACK-CLR: hsl(0, 0%, 0%);
     --WHITE-CLR: rgb(255, 255, 255);
     --LIGHT-WHITE-CLR: rgba(97, 92, 92, 0.331);
     --LIGHT-FILTER: rgba(152, 154, 152, 0.3);
     --LIGHT-TECH-FILTER: rgba(152, 154, 152, 0.553);
     --ABOUT-TEXT-CLR: hsl(0, 1%, 51%);
     --TECH-BG: hsl(220, 57%, 20%);
     --FOOTER-BACKGROUND-COLOR: hsl(218, 69%, 6%);
     --LINEAR-GRD: linear-gradient(270deg, #13ADC7 0%, #6978D1 66.67%, #945DD6 100%);
     /* FONT WEIGHT  */
     --FW-400: 400;
     --FW-500: 500;
     --FW-600: 600;
     --FW-700: 700;
     --FW-800: 800;
     --FW-900: 900;
 }

 /* GENERAL STYLING  */

 .hide {
     display: none;
 }

 body {
     overflow-x: hidden;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
     line-height: 1.3;
     font-family: 'Poppins', sans-serif;
 }

 .containers {
     background: var(--MAINBG-CLR);

 }

 html {
     scroll-behavior: smooth;
 }

 i {
     cursor: pointer;
     color: var(--WHITE-CLR);
 }

 img {
     display: block;
     max-width: 100%;
 }

 /* NAVIGATION  */
 nav {
     z-index: 100;
     padding-block: 4px 10px;
     position: fixed;
     width: 100%;
     background-color: var(--MAINBG-CLR);
 }

 nav {
     border-bottom: 1px solid var(--LIGHT-WHITE-CLR);
 }

 .iconSm {
     display: none;
 }

 .overlay,
 .open {
     display: none;
 }

 .topnav {
     display: flex;
     justify-content: space-between;
     width: min(100% - 12vw, 1200px);
     margin-inline: auto;
 }

 .logo img {
     cursor: pointer;
     padding-top: 4px;
     width: 40px;
     border-radius: 50%;
 }

 nav a,
 .overlay_content a {
     text-transform: capitalize;
     text-transform: capitalize;
     font-family: Arial, Helvetica, sans-serif;
     color: var(--WHITE-CLR);
 }

 .topnav ul a:hover {
     padding-bottom: 20px;
     border-bottom: 2px solid var(--WHITE-CLR);
 }


 .active {
     border-bottom: 2px solid var(--WHITE-CLR);
     padding-bottom: 14px;
 }

 .icon ul a:hover {
     padding-bottom: 10px;
     border-bottom: 2px solid var(--WHITE-CLR);
 }

 nav ul,
 .overlay_content ul {
     padding-top: 12px;
     display: flex;
     align-items: center;
     gap: 3rem;
 }

 nav li,
 .overlay_content li {
     list-style: none;
 }

 nav a,
 .overlay_content a {
     text-decoration: none;
 }

 .icon ul {
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 12px;
     padding-top: 20px;
 }

 .topnav ul a {
     padding: 30px 0;
 }

 .topnav ul a:first-child {
     padding: 14px 0;
 }

 /* MAIN  */
 main {
     width: min(100% - 12vw, 1200px);
     margin-inline: auto;
     position: relative;
 }

 .about {
     margin-top: 4rem;
 }

 .about p {
     padding-inline: 0;
 }

 article {
     display: flex;
     align-items: center;
     gap: 4rem;
     margin-top: 8rem !important;
 }

 .section_about_text {
     width: 780px;
     display: flex;
     flex-direction: column;
     gap: 3px;
     animation: display 2s;
 }

 .section_about_img {
     animation: displayImg 2.3s;
 }

 @keyframes display {
     from {
         opacity: 0;
     }

     to {
         opacity: 1;
     }
 }

 @keyframes displayImg {
     from {
         transform: translateX(100%);
     }

     to {
         transform: translateX(0%);
     }
 }

 /* ANIMATION  */
 .containers {
     display: none;
 }

 .animation {
     display: flex;
     align-items: center;
     justify-content: center;
     position: fixed !important;
     top: 0%;
     left: 50%;
     width: 100vw;
     height: 100vh;
     z-index: 1000;
     overflow-x: hidden;
     background-color: var(--WHITE-CLR);
     transition: .2s display;
     transform: translate(-50%, 0%);
 }


 .animation span {
     width: 10px;
     margin-inline: 4px;
     border-radius: 10px;
     height: 60px;
     background-color: rgb(13, 29, 71);
     animation: 1.3s infinite load;
 }

 .animation span:nth-child(1) {
     animation-delay: .5s;
 }

 .animation span:nth-child(2) {
     animation-delay: .20s;
 }

 .animation span:nth-child(3) {
     animation-delay: .30s;
 }

 .animation span:nth-child(4) {
     animation-delay: .40s;
 }

 .animation span:nth-child(5) {
     animation-delay: .50s;
 }

 @keyframes load {
     0% {
         background-color: #160d32;
         height: 30px;
     }

     50% {
         background-color: #160d32;
         height: 60px;
     }

     100% {
         background-color: #160d32;
         height: 30px;
     }
 }

 .about h1 {
     font-size: 3rem;
     color: var(--WHITE-CLR);
     text-transform: capitalize;
 }

 .about h3 {
     font-size: 2rem;
     color: var(--WHITE-CLR);
 }

 .name {
     font-weight: 900;
     font-family: cursive;
 }

 .about p {
     color: var(--ABOUT-TEXT-CLR);
     font-size: 1rem;
 }

 .empahSize {
     color: rgb(214, 212, 212);
 }

 .about img {
     border-radius: 20px;
 }

 .about button {
     cursor: pointer;
     border: none;
     outline: none;
     padding: 12px 11px;
     border-radius: 10px;
     border-radius: 9px;
     background: var(--LINEAR-GRD);
     color: var(--WHITE-CLR);
     font-family: inherit;
 }

 .fa-download {
     padding-left: 5px;
 }

 .hire_btn {
     font-family: inherit;
     text-decoration: none;
     color: var(--WHITE-CLR);
 }

 .about button:hover {
     filter: brightness(80%);
 }

 .btns {
     margin-top: 10px;
     display: flex;
     gap: 10px;
 }

 .download {
     padding-left: 4px;
     padding-bottom: 6px;
 }

 /* MAIN TECHNOLOGIES  */
 .section_technologies {
     margin-top: 6rem;
 }

 .course h1,
 p {
     color: var(--LIGHT-TECH-FILTER);
     padding-inline: 14px;
     font-family: inherit;
 }

 .course {
     margin-top: 4rem;
     display: flex;
     justify-content: space-between;
     animation: textanime 2s;
 }
/* ... */

